2008-02-28  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (_cygtls::handle_exceptions): When being debugged,
	leave through SetThreadContext, too, to keep exception handler stack
	intact.

2008-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* cygtls.cc (_cygtls::init_exception_handler): Fix comment.

2008-02-27  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygtls.cc (_cygtls::handle_threadlist_exception): Make it clear that
	the function never actually returns.
	* exceptions.cc (_cygtls::handle_exceptions): Jump out of function
	rather than returning to avoid meddling by previously installed
	exception handlers.

2008-02-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* dtable.cc (dtable::init_std_file_from_handle): Try harder to make a
	pipe into a full-cygwin device.
	(handle_to_fn): Change \ to / when necessary.
	* fhandler.cc (fhandler_base::init): Change bin to mode.
	* fhandler.h (fhandler_pipe::init): Declare.
	* pipe.cc (fhandler_pipe::init): Define.
	(handler_pipe::open): Move initialization code into init.

2008-02-19  Christopher Faylor  <me+cygwin@cgf.cx>

	* sigproc.cc (sig_send): Use sigmask of target thread if it is
	specified otherwise default to main sigmask.

2008-02-15  Christopher Faylor  <me+cygwin@cgf.cx>

	* exceptions.cc (handle_sigsuspend): Eliminate thread signal mask and
	use either main sigmask or current thread sigmask.
	(set_process_mask): Ditto.
	(sighold): Ditto.
	(sigrelse): Ditto.
	(sigset): Ditto.
	(set_process_mask_delta): Ditto.
	(_cygtls::call_signal_handler): Ditto.
	* fhandler_process.cc (format_process_status): Ditto.
	* fhandler_termios.cc (fhandler_termios::bg_check): Ditto.
	* pinfo.h (class pinfo): Ditto.
	* select.cc (pselect): Ditto.
	* signal.cc (sigprocmask): Ditto.
	(abort): Ditto.
	(sigpause): Ditto.
	(sigsend): Ditto.
	(wait_sig): Ditto.
	* sigproc.cc (sig_send): Ditto.
	(pending_signals::add): Ditto.
	(wait_sig): Ditto.
	* thread.h (pthread::parent_tls): New member.